added vuetify.json to javascript so it works in render function

--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
         "path": "./snippets/javascript.json"
       },
       {
+        "language": "javascript",
+        "path": "./snippets/vuetify.json"
+      },
+      {
         "language": "typescript",
         "path": "./snippets/javascript.json"
       },
