--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   "bugs": {
     "url": "https://github.com/vuetifyjs/vuetify-vscode/issues"
   },
-  "categories": ["Snippets", "Other"],
+  "categories": [
+    "Snippets",
+    "Other"
+  ],
   "contributes": {
     "snippets": [
       {
